fixing load more button width because 12% got too small for smaller screens and text would go off container

--- a/src/stylesheets/movielist.css
+++ b/src/stylesheets/movielist.css
@@ -9,10 +9,10 @@
 }
 
 .load-more-btn{
-  width:12%;
+  width:auto;
+  min-width: 20px;
+  max-width: 100%;
   border-radius: 15px;
   padding: 12px;
   margin-bottom: 45px;
-
-
 }
